Use Long.valueOf() instead of 'new'