@@ -142,7 +142,7 @@ public class SCMEventTest {
     public void equalityContract() throws Exception {
         MySCMEvent a1 = new MySCMEvent(SCMEvent.Type.CREATED, 53L, "foo");
         MySCMEvent a2 = new MySCMEvent(SCMEvent.Type.CREATED, 53L, new String("foo"));
-        MySCMEvent a3 = new MySCMEvent(SCMEvent.Type.CREATED, new Long(53L), new String("foo"));
+        MySCMEvent a3 = new MySCMEvent(SCMEvent.Type.CREATED, Long.valueOf(53L), new String("foo"));
         MySCMEvent b1 = new MySCMEvent(SCMEvent.Type.UPDATED, 53L, "foo");
         MySCMEvent c1 = new MySCMEvent(SCMEvent.Type.CREATED, 54L, "foo");
         MySCMEvent d1 = new MySCMEvent(SCMEvent.Type.CREATED, 53L, "bar");
